# tohum

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  dagger.json  flake.nix  install.sh  metadata.schema.json  release-plz.toml
.dagger/: .gitignore  package.json  tsconfig.json
.dagger/changelogs/: changelog-20250426-200001.md
.dagger/src/: index.ts
.github/workflows/: cd.yaml  release-plz.yaml  release.yaml
dagger/: .gitattributes  package.json  tsconfig.json
dagger/changelogs/: changelog-20250426-200001.md
dagger/src/: index.ts
scripts/: new-changelog.sh
silo/go/cli/: .tohumrc  go.mod
silo/node/cli-ts/: .prettierrc  .tohumrc  package.json  tsconfig.json  tsup.config.ts
silo/node/cli-ts/src/: index.ts
silo/node/react-vite-ts/: .tohumrc  package.json
silo/ts-cli/: .tohumrc  package.json  tsup.config.ts
src/: cmd.rs  config.rs  constants.rs  git.rs  io.rs  macros.rs  main.rs  metadata.rs  process.rs  progress.rs  seed.rs  silo.rs  store.rs  template.rs
src/commands/: mod.rs  plant.rs  silo.rs
src/functions/: get_template_from_repo.rs  mod.rs  replace_vars.rs
templates/: store.json
templates/go/cli/: metadata.json
templates/go/cli_1.0.0/.tohum/: metadata.json
templates/go/cli_1.0.0/cmd/: main.go
templates/node/cli/ts/: metadata.json
templates/node/cli/ts_1.0.0/: eslint.config.js  package.json  tsconfig.json  tsup.config.ts
templates/node/cli/ts_1.0.0/.tohum/: metadata.json
templates/node/cli/ts_1.1.0/: eslint.config.mjs  tsconfig.json
templates/node/cli/ts_1.1.0/.tohum/: metadata.json
templates/node/react/: metadata.json
templates/node/react/src/: main.tsx
templates/node/react/src/redux/: store.ts
templates/node/react/src/redux/slices/: counter.ts
templates/node/react_1.0.0/.tohum/: metadata.json
templates/node/react_1.0.0/src/: App.tsx
templates/node/ts/: metadata.json
tests/: cli_tests.rs
