[package]
name = "tohum"
version = "0.0.1"
edition = "2024"
description = "CLI tool to initialize new projects from pre-written templates"
categories = ["command-line-utilities"]
keywords = ["cli", "tool", "template", "project", "management"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mkaramuk/tohum"
repository = "https://github.com/mkaramuk/tohum"
authors = ["Muhammed Karamuk <mkaramuk@proton.me>", "Selim Talha Aksoy <talha-_-@hotmail.com>", "Eren Gün <erengun4@gmail.com>"]

[[bin]]
name = "tohum"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
flate2 = "1.1.1"
reqwest = "0.12.15"
tar = "0.4.44"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
clap = "4.5.36"
regex = "1.11.1"
walkdir = "2.5.0"
anyhow = "1.0.97"
assert_cmd = "2.0.17"
tempfile = "3.19.1"
predicates = "3.1.3"
