[package]
name = "tohum"
version = "0.4.0"
edition = "2024"
description = "CLI tool to initialize new projects from pre-written templates (seeds)"
categories = ["command-line-utilities"]
keywords = ["cli", "tool", "template", "project", "management"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mkaramuk/tohum"
repository = "https://github.com/mkaramuk/tohum"
authors = ["Muhammed Karamuk <mkaramuk@proton.me>", "Selim Talha Aksoy <talha-_-@hotmail.com>", "Eren Gün <erengun4@gmail.com>"]

[[bin]]
name = "tohum"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tera = "1"
clap = "4.5.36"
walkdir = "2.5.0"
anyhow = "1.0.97"
tempfile = "3.19.1"
semver = { version = "1.0", features = ["serde"] }
indicatif = "0.18"
colored = "3"
dirs = "6.0.0"
